2003-02-07 Wari Wahab <pyblosxom@wari.per.sg>
	* Fixed PATH_INFO data that was actually set when using cgiwrap even
	  if it's empty

2003-02-02 Wari Wahab <pyblosxom@wari.per.sg> pyblosxom 0.6
	* Released as version 0.6

2003-01-29 Wari Wahab <pyblosxom@wari.per.sg>
	* Added configuration override feature in flavours. This allows users
	  to modify their main configuration based on the templates' needs.
	  There could be problems though is users change essential
	  configuration items like datadir. To activate this feature, simple
	  create a file called config.$flav where $flav is replaced by
	  whatever flavours the users are overriding the configuration. The
	  contents are key-value pairs, for example
	  ------
	  num_entries 9999
	  ------
	  This will change the value that was configured in config.py.

2003-01-27 Wari Wahab <pyblosxom@wari.per.sg>
	* Fixed some ugly defaults in the example flavours

2003-01-22 Wari Wahab <pyblosxom@wari.per.sg>
	* Changed the text/xml detection just in case someone wants to use
	  application/rss+xml as the content-type for rss feeds. This will
	  ensure that anything that ends with xml will be have the content
	  'sanitized' with escaped < & > for xml. See
	  http://www.intertwingly.net/blog/1142.html for details

2003-01-15 Wari Wahab <pyblosxom@wari.per.sg>
	* Modified 404_handler.py to work with new pyblosxom subsystem

2003-01-15 Will http://www.bluesock.org/~willg/me/
	* Split the plugin initializtion into two stages - initialization and
	  load.
	* Added an api module which holds things the plugin can register with
	  to receive specific event notices as well as become part of the
	  callback chains for manipulating data.
	* Added a filestats function to the tools module which wraps os.stat
	  as well as other members in the api.filestats callback chain.
	* Added a pyfilenamemtime module that examines file names and if they
	  match yyyy-mm-dd-HH-MM, then it fixes the mtime on the os.stat
	  tuple.
	
